Plasmashell freezes when trying to get free space info from mounted remote filesystem after losing connection to it

Summary:
BUG: 397537

Earlier plasmashell assumed that you'll get free space info immediately (which is not true in case of losing connection to server containing a mounted filesystem - statfs will wait for response forever and freeze everything since it's happening in main thread)

I moved obtaining that info into different thread so that case won't freeze anything anymore.
It creates exactly one thread per one path. If a path is already being processed, new thread won't be created.
Also I implemented a timer used to notify about broken connection after 15 seconds.

Reviewers: broulik, ngraham, davidedmundson

Reviewed By: broulik

Subscribers: ngraham, anthonyfieroni, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D14895

Backported to 5.12 LTS (sans notification due to new strings) for impact to corporate setups
CCBUG: 399945

(cherry picked from commit e1c19ce4daf92a14dee44b44d199672034a346c0)