dataengines/soliddevice/soliddeviceengine.h
@@ -80,6 +80,8 @@ private:
     QMap<QString, Solid::Device> m_devicemap;
     //udi, corresponding encrypted container udi;
     QMap<QString, QString> m_encryptedContainerMap;
+    //path, for pending file system free space jobs
+    QSet<QString> m_paths;
     DeviceSignalMapManager *m_signalmanager;
 
     HddTemp *m_temperature;
